# My-NLP

./: .gitignore  README.md  pyproject.toml
notes/: all_notes.md
notes/CS336/: architectures.ipynb  evaluation.ipynb  hyperparameter.ipynb  lec_5_gpu.ipynb  posttraining.ipynb  pretraining.ipynb  resource_accounting.ipynb  tokenize.ipynb
notes/lec_1_wordvec/: notes.md
notes/lec_2_bp/: notes.md
notes/lec_3_parsing/: notes.md
notes/training/post_training/: README.md  helper.py
notes/training/post_training/L3/: Lesson_3.ipynb  helper.py
notes/training/post_training/L5/: Lesson_5.ipynb  helper.py
notes/training/post_training/L7/: Lesson_7.ipynb
notes/training/post_training/notes/: chat_template.jinja2  jinja.ipynb  onlineRl.ipynb  output.html  prompt_template.jinja2  template.html
notes/training/post_training/src/: DPO_train.py  GRPO_train.py  SFT_train.py  load_qwen.py
notes/training/pre_training/: README.md
slides/cs336_slides/: lecture_02.py  lecture_17.py
src/: word_vector.ipynb
src/ai_2801/homework_1/: HW1.ipynb  main.py  sample_words.py  validate.py
src/ai_2801/homework_1/src/: tester.py  trainer.py
src/ai_2801/homework_2/: HW2.ipynb  run.sh
src/ai_2801/homework_2/src/: main.py  statistics.py  train_rnn.py  validate.py
src/ai_2801/homework_3/: HW3.ipynb
src/ai_2801/homework_3/src/: bert_result.py  main.py  my_fasttext_trainer.py
src/ai_2801/homework_4/: HW4.ipynb  README.md
src/basic/attention/: NWKernel_Regression.py
src/basic/transformer/: sentiment_analysis.ipynb
src/utils/: chips.py  download_data.py
